# ceraunus

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
ceraunus/: Cargo.toml
ceraunus/src/: main.rs
configs/: .gitignore  datacenter-config.example.toml
data/: Cargo.toml
data/benches/: event_deser.rs  order_trade_update_deser.rs
data/src/: config.rs  error.rs  lib.rs  order.rs  request.rs
data/src/binance/: account.rs  market.rs  mod.rs  request.rs  response.rs  subscription.rs
trading-core/: Cargo.toml
trading-core/src/: account.rs  engine.rs  error.rs  exchange.rs  lib.rs  models.rs  strategy.rs
xchg/: Cargo.toml
xchg/src/: exchange.rs
