[package]
name = "ceraunus"
version = "0.1.0"
edition = "2024"

[dependencies]
trading-core = { path = "../trading-core" }
data = { path = "../data" }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
url = { workspace = true }
futures-util = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

openssl = { workspace = true }
