[package]
name = "ceraunus"
version = "0.1.0"
edition = "2024"

[dependencies]
trading-core = { path = "../trading-core" }
data = { path = "../data" }

tokio = { workspace = true, features = ["full", "tracing"] }
console-subscriber = { version = "0.5" }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
url = { workspace = true }
futures-util = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = {workspace = true }

openssl = { workspace = true }
