[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true, features = ["serde", "v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }

csv = "1.4.0"
strum = "0.27"
strum_macros = "0.27"

openssl = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "event_deser"
harness = false
