[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true, features = ["serde", "v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
csv = "1.4.0"

derive_more = { workspace = true }
derive-getters = { workspace = true, features = ["auto_copy_getters"] }
strum = { workspace = true }
strum_macros = { workspace = true }

openssl = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "event_deser"
harness = false

[[bench]]
name = "order_trade_update_deser"
harness = false
