[package]
name = "trading-core"
version = "0.1.0"
edition = "2024"

[dependencies]
data = { path = "../data" }
rust_decimal = { workspace = true, features = ["macros", "serde"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

derive-getters = { workspace = true, features = ["auto_copy_getters"]}
derive_more = { workspace = true }

indexmap = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }

url = { workspace = true }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
serde_urlencoded = "0.7.1"

openssl = { workspace = true }
